completed registration api
