# api/app/openapi.v1.yaml
@@ -120,6 +120,7 @@ paths:
                 - name
                 - email
                 - password
+                - password_confirmation
               properties:
                 name:
                   type: string
@@ -127,12 +128,15 @@ paths:
                   type: string
                 password:
                   type: string
+                password_confirmation:
+                  type: string
             example:
               name: johndoe
               email: john.doe@example.com
               password: strongpassword123
+              password_confirmation: strongpassword123
       responses:
-        '200':
+        '201':
           description: User created successfully.
           content:
             application/json:
